fixed: 1. border of success message, 2. Color of Converter in dark mode and light mode, 3. Action buttons

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
   padding: 0;
   margin: 0;
   position: relative;
-  border: 2px solid white;
+  border: none;
   border-radius: 2px;
 }
 
@@ -199,6 +199,35 @@ textarea {
 
 .button:focus {
   box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+
+/* CSS */
+.button-53 {
+  padding: 12px 26px;
+  border: 0;
+  font-size: 16px;
+  transition: all 150ms ease-in-out;
+
+  border-radius: 8px;
+  font-weight: 600;
+
+  color: #000;
+
+  border-radius: 7px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 70.48%, #FFF 93.62%, rgba(255, 255, 255, 0.00) 100%), linear-gradient(180deg, rgba(30, 54, 87, 0.00) 0%, rgba(30, 54, 87, 0.01) 100%), #FAFAFA;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.08) 0 0 0 1px, rgba(0, 0, 0, 0.08) 0 -2px 1px 0 inset, rgba(255, 255, 255, 0.5) 0 2px 1px 0 inset, 0 2px 5px -1px rgba(0, 0, 0, 0.05), 0 1px 3px -1px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.button-53:hover {
+  background-color: #F5F5F5;
+}
+
+.button-53:active {
+  background-color: #F1F1F1;
+  box-shadow: rgba(0, 0, 0, 0.08) 0 0 0 1px, rgba(0, 0, 0, 0.08) 0 1px 1px 0 inset, rgba(255, 255, 255, 0.1) 0 2px 1px 0 inset, 0 2px 5px -1px rgba(0, 0, 0, 0.05);
 }
 
 /* action buttons end=============================== */
